# python_finance

./: .gitignore  LICENSE  README.md  README_CN.md  backtester.py  config.yaml  data_loader.py  data_loader.yml  main.py  pyproject.toml  sample_test_01.ipynb  sample_test_600016.ipynb  sample_test_688981.ipynb  sample_test_9988.ipynb  visualizer.py
stock_data/: 600016.csv  688981.csv  9988.csv
strategies/: __init__.py  base_strategy.py  linear_regression_strategy.py  macd_strategy.py  ml_strategy.py  moving_average_strategy.py  polynomial_regression_strategy.py  random_forest_strategy.py  rsi_strategy.py
